--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "desafio2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/leofsousa/desafio2",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
